src/test/ui/rfc-2632-const-trait-impl/tilde-const-invalid-places.stderr
error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:8:19
   |
LL | fn rpit() -> impl ~const T { S }
   |                   ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:11:17
   |
LL | fn apit(_: impl ~const T) {}
   |                 ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:14:50
   |
LL | fn rpit_assoc_bound() -> impl IntoIterator<Item: ~const T> { Some(S) }
   |                                                  ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:17:48
   |
LL | fn apit_assoc_bound(_: impl IntoIterator<Item: ~const T>) {}
   |                                                ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:20:15
   |
LL | fn generic<P: ~const T>() {}
   |               ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` is not allowed here
  --> $DIR/tilde-const-invalid-places.rs:23:31
   |
LL | fn where_clause<P>() where P: ~const T {}
   |                               ^^^^^^^^
   |
   = note: only allowed on bounds on traits' associated types and functions, const fns, const impls and its associated functions

error: `~const` and `?` are mutually exclusive
  --> $DIR/tilde-const-invalid-places.rs:26:25
   |
LL | struct TildeQuestion<T: ~const ?Sized>(std::marker::PhantomData<T>);
   |                         ^^^^^^^^^^^^^

error: aborting due to 7 previous errors

